Animacion de inicio y cambio de posicion al radial gradient del inicio

--- a/conFramework/index.html
+++ b/conFramework/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <div id="pre-load"></div>
+    <div id="pre-load">
+        <div id="container-initial-logo">
+            <img id="initial-logo" src="assets/images/logo.png" alt="Ver mi portafolio">
+        </div>
+    </div>
     <div class="load">
         <!-- (REFACTORIZADO) Header con Navbar de Bootstrap -->
         <header>
