modificación en informacion personal

--- a/conFramework/index.html
+++ b/conFramework/index.html
@@ -63,8 +63,8 @@
                         </div>
                         <div class="col-12 col-md-6 px-sm-1">
                             <div class="inicio-text text-md-start">
-                                <h2>Nombre Completo Aquí</h2>
-                                <p><strong>Fecha de Nacimiento:</strong> 01 de Enero de 2000</p>
+                                <h2>Juan David Vela Coronado</h2>
+                                <p><strong>Fecha de Nacimiento:</strong> 06 de Julio de 2006</p>
                                 <p><strong>Mis expectativas como profesional:</strong></p>
                                 <p class="lead text-justify">
                                     Busco aplicar mis conocimientos en desarrollo de software para crear soluciones
@@ -89,21 +89,24 @@
                                     <th>Nivel</th>
                                     <th>Institución</th>
                                     <th>Años</th>
-                                    <th>Ubicación (Opcional)</th>
+                                    <!-- MODIFICACIÓN: Añadido un span para el icono -->
+                                    <th>
+                                        <span class="location-header">Ubicación (Opcional)</span>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Universidad</td>
+                                    <td>Pregrado</td>
                                     <td>Universidad del Cauca</td>
-                                    <td>2021 - 2025</td>
+                                    <td>2022 - Actualidad</td>
                                     <td>Popayán, Colombia</td>
                                 </tr>
                                 <tr>
                                     <td>Bachillerato</td>
-                                    <td>Colegio Ejemplo</td>
-                                    <td>2015 - 2020</td>
-                                    <td>Ciudad, País</td>
+                                    <td>Colegio Guillermo Leon Valencia</td>
+                                    <td>2017 - 2022</td>
+                                    <td>Popayán, Colombia</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -118,10 +121,10 @@
                     <div id="hobbiesCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/images/pasatiempo1.jpg" class="d-block w-100" alt="Astronomía Amateur">
+                                <img src="assets/images/pasatiempo1.jpg" class="d-block w-100" alt="Musica">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h3>Astronomía Amateur</h3>
-                                    <p>Me apasiona observar las estrellas y galaxias con mi telescopio.</p>
+                                    <h3>Musica</h3>
+                                    <p>Amo tocar la guitarra acustica y electrica.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -132,10 +135,10 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/pasatiempo3.jpg" class="d-block w-100" alt="Videojuegos Retro">
+                                <img src="assets/images/pasatiempo3.jpg" class="d-block w-100" alt="Motociclismo">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h3>Videojuegos Retro</h3>
-                                    <p>Colecciono y juego clásicos de los 80 y 90.</p>
+                                    <h3>Motociclismo</h3>
+                                    <p>Disfruto la velocidad y los paisajes mientras monto mi moto.</p>
                                 </div>
                             </div>
                         </div>
@@ -159,16 +162,14 @@
                     <h1 class="section-title text-center mb-4">Proyectos</h1>
                     <ul class="project-list">
                         <li>
-                            <h3>Proyecto Alpha</h3>
-                            <p>Una aplicación web para la gestión de tareas personales. Desarrollada con HTML, CSS y
-                                JavaScript puros. <a href="#" target="_blank">Ver proyecto</a></p>
-                            <p><em>Tecnologías: JavaScript, HTML5, CSS3.</em></p>
+                            <h3>Sistema de Gestión de Proyectos Académicos.</h3>
+                            <p>Una aplicación de escritorio que utiliza arquitectura en microservicios para facilitar o hacer de "puente" el proceso de practicas profesionales en estudiantes. <a href="https://github.com/paulamunoz06/GestionProyectosMicro" target="_blank">Ver proyecto</a></p>
+                            <p><em>Tecnologías: JavaAWT, Spring Boot, MariaDB, Docker.</em></p>
                         </li>
                         <li>
-                            <h3>Bot de Discord "Stellar"</h3>
-                            <p>Un bot para servidores de Discord que proporciona datos astronómicos diarios utilizando una
-                                API externa.</p>
-                            <p><em>Tecnologías: Node.js, Discord.js API.</em></p>
+                            <h3>Predicción de ondas sismicas primarias(ondas p).</h3>
+                            <p>Red neuronal convolucional para procesar espectogramas y predecir ondas sísmicas primarias.</p>
+                            <p><em>Tecnologías: Python, TensorFlow, Keras, Optuna, scikit-learn.</em></p>
                         </li>
                     </ul>
                 </div>
