--- a/conFramework/index.html
+++ b/conFramework/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="load">
         <!-- (REFACTORIZADO) Header con Navbar de Bootstrap -->
-        <header>
+        <header class="fixed-top">
             <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
                 <div class="container-fluid">
                     <!-- Logo / Título -->
@@ -59,7 +59,7 @@
                 <div class="inicio-content container-fluid">
                     <div class="row align-items-center">
                         <div class="col-12 col-md-6 text-start px-sm-1">
-                            <img src="assets/images/tu-foto.png" alt="Foto Personal" class="personal-photo mb-4">
+                            <img src="assets/images/tu-fotob.jpg" alt="Foto Personal" class="personal-photo mb-4">
                         </div>
                         <div class="col-12 col-md-6 px-sm-1">
                             <div class="inicio-text text-md-start">
@@ -177,7 +177,7 @@
     
             <!-- SECCIÓN CONTACTO (REFACTORIZADO con Formulario de Bootstrap) -->
             <section id="contacto" class="py-5">
-                <div class="container section-container">
+                <div id="container-contacto" class="container section-container">
                     <h1 class="section-title text-center mb-4">Contacto</h1>
                     <div id="messages"></div>
                     <!-- Usamos la rejilla de Bootstrap para centrar el formulario en pantallas grandes -->
