--- a/conFramework/index.html
+++ b/conFramework/index.html
@@ -255,7 +255,7 @@
         <!-- (REFACTORIZADO) Footer con clases de Bootstrap -->
         <footer class="main-footer text-center py-3">
             <div class="container">
-                <p class="mb-0">&copy; 2025 - Mi Página Personal. Diseñado por [Tu Nombre].</p>
+                <p class="mb-0">&copy; 2025 - Mi Página Personal. Diseñado por Juan David Vela.</p>
             </div>
         </footer>
     </div>
@@ -268,6 +268,6 @@
     <script src="js/contacto/ContactRepository.js"></script>
     <script src="js/contacto/ContactFacade.js"></script>
 
-    <script src="js/script.js"></script>
+    <script src="js/funciones.js"></script>
 </body>
 </html>
