--- a/conFramework/index.html
+++ b/conFramework/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- (IMPORTANTE) Tu hoja de estilos va DESPUÉS de Bootstrap para poder sobreescribir -->
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div id="pre-load">
