cambie la imagen de mi fea cara

--- a/conFramework/index.html
+++ b/conFramework/index.html
@@ -59,7 +59,7 @@
                 <div class="inicio-content container-fluid">
                     <div class="row align-items-center">
                         <div class="col-12 col-md-6 text-start px-sm-1">
-                            <img src="assets/images/tu-fotob.jpg" alt="Foto Personal" class="personal-photo mb-4">
+                            <img src="assets/images/mi-foto.png" alt="Foto Personal" class="personal-photo mb-4">
                         </div>
                         <div class="col-12 col-md-6 px-sm-1">
                             <div class="inicio-text text-md-start">
